Add detailed tmux config with explanations

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,85 +1,291 @@
+cat > dot_tmux.conf << 'EOF'
 #############################################################
-# Tmux Configuration                                         #
+# Tmux Configuration - Explained                            #
 #############################################################
+# Tmux is a terminal multiplexer - lets you run multiple
+# terminal sessions in one window, detach/reattach sessions,
+# and survive SSH disconnections.
 
-# Change prefix from Ctrl+b to Ctrl+a (easier to reach)
-unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+#############################################################
+# Prefix Key Configuration                                  #
+#############################################################
+# The "prefix" is the key combo you press before tmux commands
+# Default is Ctrl+b, but Ctrl+a is easier to reach and commonly
+# used (same as GNU Screen)
 
-# Enable mouse support
+unbind C-b                  # Remove default Ctrl+b binding
+set -g prefix C-a           # Set new prefix to Ctrl+a
+bind C-a send-prefix        # Allow Ctrl+a to be sent to apps (press twice)
+
+# Why? Ctrl+a is on home row, easier than Ctrl+b
+# Example: Ctrl+a then c = create new window
+
+#############################################################
+# Mouse Support                                             #
+#############################################################
+# Enables mouse for selecting panes, resizing, scrolling
+# Makes tmux much more user-friendly
+
 set -g mouse on
 
-# Better colors
+# What you can do:
+# - Click on panes to switch
+# - Drag pane borders to resize
+# - Scroll with mouse wheel
+# - Select text with mouse (then y to copy in vi mode)
+
+#############################################################
+# Colors and Terminal                                       #
+#############################################################
+# Enable 256 colors and true color support
+# Without this, colors in vim/apps look wrong
+
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
-# Start windows and panes at 1, not 0
-set -g base-index 1
-setw -g pane-base-index 1
-set -g renumber-windows on
+# screen-256color = tell apps we support 256 colors
+# Tc = true color support (24-bit RGB colors)
 
-# Split panes with intuitive keys
+#############################################################
+# Window and Pane Numbering                                 #
+#############################################################
+# By default, windows/panes start at 0
+# Starting at 1 is more intuitive (keyboard layout)
+
+set -g base-index 1              # Windows start at 1
+setw -g pane-base-index 1        # Panes start at 1
+set -g renumber-windows on       # Renumber windows when one is closed
+
+# Example: If you close window 2, window 3 becomes 2
+# This keeps numbering continuous
+
+#############################################################
+# Intuitive Pane Splitting                                  #
+#############################################################
+# Default split keys (% and ") are hard to remember
+# Use | for vertical split, - for horizontal
+
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
-unbind '"'
-unbind %
+unbind '"'    # Remove default horizontal split
+unbind %      # Remove default vertical split
 
-# New window in current path
+# -h = horizontal split (side by side)
+# -v = vertical split (top and bottom)
+# -c "#{pane_current_path}" = new pane starts in same directory
+
+# Visual reminder:
+#  |  = vertical line = split vertically
+#  -  = horizontal line = split horizontally
+
+#############################################################
+# New Window Behavior                                       #
+#############################################################
+# When creating a new window, start in current directory
+# (default starts in directory where tmux was launched)
+
 bind c new-window -c "#{pane_current_path}"
 
-# Easy pane switching with Alt+arrow (no prefix needed)
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+#############################################################
+# Pane Navigation - No Prefix Needed!                       #
+#############################################################
+# Alt+Arrow to switch panes without pressing prefix first
+# This is much faster for quick navigation
 
-# Pane resizing with prefix + arrow
-bind -r Left resize-pane -L 5
-bind -r Right resize-pane -R 5
-bind -r Up resize-pane -U 5
-bind -r Down resize-pane -D 5
+bind -n M-Left select-pane -L     # Alt+Left = go left
+bind -n M-Right select-pane -R    # Alt+Right = go right
+bind -n M-Up select-pane -U       # Alt+Up = go up
+bind -n M-Down select-pane -D     # Alt+Down = go down
 
-# Vi mode for copy/paste
+# -n = no prefix needed (M = Meta/Alt key)
+# Most used feature! Try it: Alt+Arrow to jump between panes
+
+#############################################################
+# Pane Resizing                                             #
+#############################################################
+# Resize panes with Prefix + Arrow keys
+# -r = repeatable (can press multiple times without prefix)
+
+bind -r Left resize-pane -L 5     # Prefix+Left = resize left 5 cells
+bind -r Right resize-pane -R 5    # Prefix+Right = resize right
+bind -r Up resize-pane -U 5       # Prefix+Up = resize up
+bind -r Down resize-pane -D 5     # Prefix+Down = resize down
+
+# Example: Ctrl+a then hold Right arrow = keep resizing right
+
+#############################################################
+# Vi Mode for Copy/Paste                                    #
+#############################################################
+# Vi-style key bindings for copy mode (like vim)
+# Enter copy mode: Prefix + [
+
 setw -g mode-keys vi
-bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi y send -X copy-selection-and-cancel
 
-# Reload config with prefix + r
+# In copy mode (after Prefix + [):
+bind -T copy-mode-vi v send -X begin-selection      # v = start selection
+bind -T copy-mode-vi y send -X copy-selection-and-cancel  # y = copy and exit
+
+# Workflow:
+# 1. Prefix + [ (enter copy mode)
+# 2. Move with hjkl or arrows
+# 3. Press v to start selecting
+# 4. Move to select text
+# 5. Press y to copy and exit
+# 6. Prefix + ] to paste
+
+#############################################################
+# Reload Configuration                                      #
+#############################################################
+# Reload this file without restarting tmux
+
 bind r source-file ~/.tmux.conf \; display "Config reloaded!"
 
-# Don't rename windows automatically
+# Usage: Prefix + r
+# Useful when testing config changes
+
+#############################################################
+# Window Renaming                                           #
+#############################################################
+# Don't let programs rename windows automatically
+# (keeps your custom names)
+
 set -g allow-rename off
 
-# Increase scrollback buffer
-set -g history-limit 10000
+# Without this, running a program changes window name
+# With this, your window names stay as you set them
 
-# No delay for escape key press
-set -sg escape-time 0
+#############################################################
+# Performance and Usability                                 #
+#############################################################
 
-# Status bar configuration
-set -g status-position bottom
-set -g status-style bg=black,fg=white
-set -g status-left-length 50
-set -g status-right-length 50
+set -g history-limit 10000     # Scrollback buffer (10k lines)
+set -sg escape-time 0          # No delay for ESC key (important for vim!)
 
-# Left status: session name
+# history-limit: how many lines you can scroll back
+# escape-time: vim users NEED this at 0 (or vim feels sluggish)
+
+#############################################################
+# Status Bar Customization                                  #
+#############################################################
+
+set -g status-position bottom           # Status bar at bottom
+set -g status-style bg=black,fg=white   # Black background, white text
+set -g status-left-length 50            # Max length of left status
+set -g status-right-length 50           # Max length of right status
+
+# Left side: session name with blue background
 set -g status-left '#[bg=blue,fg=black,bold] #S #[bg=black] '
+# #S = session name
 
-# Window status
-setw -g window-status-format ' #I:#W '
-setw -g window-status-current-format '#[bg=green,fg=black,bold] #I:#W '
+# Window list in middle
+setw -g window-status-format ' #I:#W '              # Inactive windows
+setw -g window-status-current-format '#[bg=green,fg=black,bold] #I:#W '  # Active window
+# #I = window index, #W = window name
 
-# Right status: hostname, date, time
+# Right side: date and time
 set -g status-right '#[bg=black,fg=white] %Y-%m-%d #[bg=blue,fg=black,bold] %H:%M '
+# %Y-%m-%d = year-month-day
+# %H:%M = hour:minute (24h format)
 
-# Pane borders
-set -g pane-border-style fg=colour240
-set -g pane-active-border-style fg=green
+#############################################################
+# Visual Styling                                            #
+#############################################################
 
-# Message style
+# Pane borders (lines between splits)
+set -g pane-border-style fg=colour240           # Inactive pane: dark grey
+set -g pane-active-border-style fg=green        # Active pane: green
+
+# Messages (when you run commands)
 set -g message-style bg=yellow,fg=black,bold
 
-# Activity monitoring
-setw -g monitor-activity on
-set -g visual-activity off
+# Activity monitoring (shows when something happens in background window)
+setw -g monitor-activity on     # Monitor for activity
+set -g visual-activity off       # Don't show big notification
+
+# Shows a highlight in status bar instead of popup
+
+#############################################################
+# Key Bindings Summary                                      #
+#############################################################
+# Prefix: Ctrl+a (press before most commands)
+#
+# === Sessions ===
+#   Ctrl+a d          Detach from session
+#   Ctrl+a s          List/switch sessions
+#   Ctrl+a $          Rename session
+#
+# === Windows (like tabs) ===
+#   Ctrl+a c          Create new window
+#   Ctrl+a ,          Rename window
+#   Ctrl+a n          Next window
+#   Ctrl+a p          Previous window
+#   Ctrl+a 0-9        Switch to window by number
+#   Ctrl+a &          Kill window
+#
+# === Panes (splits) ===
+#   Ctrl+a |          Split vertically (left|right)
+#   Ctrl+a -          Split horizontally (top—bottom)
+#   Alt+Arrow         Switch pane (NO PREFIX!)
+#   Ctrl+a Arrow      Resize pane
+#   Ctrl+a x          Kill pane
+#   Ctrl+a z          Zoom pane (fullscreen toggle)
+#   Ctrl+a !          Break pane to new window
+#
+# === Copy Mode ===
+#   Ctrl+a [          Enter copy mode (scroll/copy)
+#   v                 Start selection (in copy mode)
+#   y                 Copy selection (in copy mode)
+#   Ctrl+a ]          Paste
+#   q                 Exit copy mode
+#
+# === Other ===
+#   Ctrl+a r          Reload config
+#   Ctrl+a ?          Show all key bindings
+#   Ctrl+a :          Command prompt
+#
+#############################################################
+# Tmux Workflow Tips                                        #
+#############################################################
+#
+# 1. Sessions = Projects
+#    tmux new -s work      # Work session
+#    tmux new -s personal  # Personal session
+#    Ctrl+a d              # Detach (keeps running)
+#    tmux attach -t work   # Attach back later
+#
+# 2. Windows = Tasks in a project
+#    Window 1: editor
+#    Window 2: server
+#    Window 3: logs
+#
+# 3. Panes = Multiple terminals side by side
+#    Left: code editor
+#    Right top: tests running
+#    Right bottom: git commands
+#
+# 4. Survive SSH disconnects!
+#    ssh server
+#    tmux new -s dev
+#    # Work...
+#    # Connection drops
+#    ssh server
+#    tmux attach -t dev    # Everything still there!
+#
+#############################################################
+# Learning Resources                                        #
+#############################################################
+# Official: man tmux
+# Cheat sheet: https://tmuxcheatsheet.com/
+# Book: "The Tao of tmux"
+#
+# Practice commands:
+#   tmux new -s practice     # Start session
+#   Ctrl+a |                 # Split vertically
+#   Ctrl+a -                 # Split horizontally
+#   Alt+Arrow                # Navigate panes
+#   Ctrl+a c                 # New window
+#   Ctrl+a n/p               # Switch windows
+#   Ctrl+a d                 # Detach
+#   tmux attach              # Reattach
+#############################################################
+EOF
